--- a/css/style.css
+++ b/css/style.css
@@ -136,4 +136,48 @@ footer .copyright {
   margin: 0 auto;
 }
 
+/* Colores de Fondo */
+/* Tamaño de fuentes */
+.seccionTresInicio {
+  background-color: white;
+  /*height: 80vh;*/
+  width: 100%;
+  color: black;
+  font-size: large;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+}
+.seccionTresInicio div {
+  display: inline-block;
+}
+.seccionTresInicio h2 {
+  color: rgb(43, 197, 197);
+  padding: 3vh 3vw;
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.seccionTresInicio .seccionContactoFormulario {
+  width: 50%;
+}
+.seccionTresInicio .seccionContactoFormulario form {
+  padding: 2vh 3vw;
+  margin: 0 auto;
+}
+.seccionTresInicio .seccionContactoFormulario form fieldset {
+  padding: 2vh 3vw;
+}
+.seccionTresInicio .seccionContactoFormulario form fieldset label {
+  padding-top: 2vh;
+  padding-bottom: 4vh;
+}
+.seccionTresInicio .seccionContactoFormulario form fieldset input {
+  text-align: center;
+  padding: 0.5vh 2vw;
+  margin-bottom: 0.5vh;
+  margin-left: 3vw;
+}
+.seccionTresInicio .seccionContactoMapa {
+  text-align: center;
+}
+
 /*# sourceMappingURL=style.css.map */
