--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,4 +4,5 @@
 @import '../scss/base/estilosGenerales';
 @import '../scss/components/portadaInicio';
 @import '../scss/components/footer';
-@import '../scss/components/seccionDosInicio'
+@import '../scss/components/seccionDosInicio';
+@import '../scss/components/seccionTresInicio';
