--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -13,7 +13,8 @@
     
         .encabezadoLogo {
         width: 150px;
-        margin-top: 1.5vh;
+        margin-top: 30px;
+        margin-right: 400px;
         }
     }    
         nav {
@@ -26,7 +27,8 @@
                     a{
                     color: black;
                     font-size: $font-size-nav;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif ;
+                    
                     }
 
             }
