--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 
 * {
     margin: 0;
@@ -18,3 +20,7 @@ a {
 ul {
     list-style-type: none;
 }  
+
+a {
+    list-style-type: none;
+}
