--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,25 +1,29 @@
 @import '../base/variables';
-
+@import '../base/mapas';
 footer {
-    background-color: $bg-color-encabezado;
+    background-color: map-get($footer, bg-footer);
     width: 100%;
-    height: 20vh;
+    height: map-get($footer, height-footer );
+    font-family: map-get($footer,font-family-footer );
 
     ul {
-    padding-top: 1vh;
-    margin-left: 10%;
+    padding-top: map-get($footer, padding-top-footer); 
+    margin-left: map-get($footer, marging-left-footer); 
 
         li {
-        padding: 1vh 2vw;
-        display: flex;
-        align-items: flex-start;
+        padding: map-get($footer, padding-lista-footer) ;
+        display: map-get($footer, display-footer); 
+        
             a {
-            color: black; 
-         
+            color: map-get($footer, color-text); 
+            display: map-get($footer, display-footer); 
+            align-items: center;   
+            //font-family: map-get($footer, font-family-footer);
+
             }
             
             img {
-            width: 15px;
+            width: map-get($footer, width-img); 
 
             }
         
@@ -27,11 +31,11 @@ footer {
     }
 
     .copyright {
-    padding-left: 50%  ;
-    color: black;
-    font-size: small;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
+    padding-left: map-get($copyright, padding-left-copy) ;
+    color: map-get($copyright, color-copy ) ;
+    font-size: map-get($copyright, font-size-copy);
+    font-style: map-get($copyright, font-style-copy); 
+    font-family: map-get($copyright, font-family-copy); 
     }
 
 
