--- a/scss/components/_portadaInicio.scss
+++ b/scss/components/_portadaInicio.scss
@@ -3,7 +3,7 @@
 .portadaInicio {
     background-color: white;
     width: 100%;
-    margin: 0 auto;
+   // margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,7 +15,12 @@
         
         div {
             display: inline-block;
-            margin: 0 auto;
+           // margin: 0 auto;
+
+            img {
+                width: 1000px;
+                height: 100%;
+            }
 
             h2 {
             color: rgb(43, 197, 197);
@@ -23,6 +28,13 @@
             font-family: Arial, Helvetica, sans-serif;
             padding: 3vh 3vw;
             text-align: center;
+
+                a {
+                    color: $bg-color-encabezado;
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 40px;
+                }
+
             }
 
             p {
