--- a/scss/components/_seccionDosInicio.scss
+++ b/scss/components/_seccionDosInicio.scss
@@ -10,19 +10,36 @@
     color: rgb(255, 154, 95);
     font-size:xx-large;
     font-family: Arial, Helvetica, sans-serif;
+
+        a {
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 40px;
+
+        }
+
     }
     
     ul {
     margin: 0 auto;
         li {
         display: inline-block;
-        padding: 5vh 5vw;
-        /* background-color: white; */
-        color: rgb(209, 131, 87);
+        margin: 40px 100px;
+        
+        color: white;
         font-size: large;   
             img {
                 width: 250px;
-                margin: 0 auto;
+               // margin: 0 auto;
+            }
+
+            p {
+                background-color: $bg-color-encabezado;
+                font-family: 'Montserrat', sans-serif;
+                text-align: center;
+                width: 300px;
+                height: 50px;
+                margin-top: 20px ;
             }
 
             
