--- a/scss/components/_seccionTresInicio.scss
+++ b/scss/components/_seccionTresInicio.scss
@@ -7,42 +7,111 @@
     color: black;
     font-size: large;
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    //text-align: center;
+    display: grid;
+    grid-template-areas: 
+    
+    "titulo titulo"
+    "formulario mapa"
+    ;
+    
+    grid-template-columns: 50% auto;
+    grid-template-rows: 70px auto;
 
 
-    div {
-        display: inline-block;
+    a {
+        color: $bg-color-encabezado;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 40px;
+
     }
 
 
     h2 {
-        color: rgb(43, 197, 197);
+    color: rgb(43, 197, 197);
     padding: 3vh 3vw;
     font-size:xx-large;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
     }
 
     .seccionContactoFormulario {
-        width: 50%;         
+       // width: 50%;         
 
         form {
-            padding: 2vh 3vw;
+            padding: 2vh 2vw;
             margin: 0 auto; 
+            
+
+            
+        
 
             fieldset {
-                padding: 2vh 3vw;
+               // padding: 2vh 3vw;
+                display: grid;
+                grid-template-areas: 
+                
+                "nombre ingreso-nombre"
+                "mail ingreso-mail"
+                "consulta ingreso-consulta"
+                "enviar enviar"
+                
+                ;
+               // grid-template-columns: 1fr auto;
+               // grid-template-rows: 100px 100px 200px 100px;
+                
+                border-color: white;
+                border: none;
+                
+
 
                 label {
                     padding-top: 2vh;
                     padding-bottom: 4vh;
+                    margin-right: 15px;
+                    text-align: right;
+                    //display: flex;
+                    //flex-direction: column;
+                    color: black;
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 20px;
+                    
+                   
 
                 }
 
-                input {
+                input { 
+                
                     text-align: center;
-                    padding: 0.5vh 2vw;
-                    margin-bottom: 0.5vh;
-                    margin-left: 3vw;
+                    margin: 15px 0;
+                    color: black;
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 18px;    
+
+
+
+
+                    //padding: 0.5vh 2vw;
+                    //margin-bottom: 0.5vh;
+                    //margin-left: 3vw;
+                    //display: flex;
+                    //flex-direction: column;
+                    
+                }
+
+                textarea {
+                    color: black;
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 18px;
+                    padding: 10px;
+                }
+
+                .boton-enviar {
+                    width: 180px;
+                    height: 40px;
+                    margin-left: 50%;
+                    
+                    
                 }
 
             }
@@ -51,13 +120,67 @@
         }
 
 
-    
 
     .seccionContactoMapa {
 
         text-align: center;
+        margin-top: 32px;
+       // width: 800px;
+       // height: 00px;
+       // overflow: hidden;
+        
+       a {
+            color: black;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 20px;
+        
+    
+       }
     }
 
 }
     
 
+// Grid area seccion 3
+
+h2 {
+    grid-area: titulo;
+}
+
+.seccionContactoFormulario {
+    grid-area: formulario;
+}
+
+.seccionContactoMapa {
+    grid-area: mapa;
+}
+
+// Grid area formulario
+
+.nombre {
+    grid-area: nombre;
+}
+
+.mail {
+    grid-area: mail;
+}
+
+.consulta {
+    grid-area: consulta;
+}
+
+.ingreso-nombre{
+    grid-area: ingreso-nombre;
+}
+
+.ingreso-mail{
+    grid-area: ingreso-mail;
+}
+
+.ingreso-consulta{
+    grid-area: ingreso-consulta    
+}
+
+.boton-enviar {
+    grid-area: enviar;
+}
