--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,7 +8,7 @@
     text-align: center;
 
 
-    h1 {
+    .logo {
         display: inline-block;
     
         .encabezadoLogo {
@@ -35,3 +35,6 @@
         }
     }
 }
+
+
+
