--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@
   height: 20vh;
   text-align: center;
 }
-.encabezado h1 {
+.encabezado .logo {
   display: inline-block;
 }
-.encabezado h1 .encabezadoLogo {
+.encabezado .logo .encabezadoLogo {
   width: 150px;
   margin-top: 30px;
   margin-right: 400px;
@@ -73,23 +73,24 @@ a {
   width: 1000px;
   height: 100%;
 }
-.portadaInicio main div h2 {
+.portadaInicio main div h1 {
   color: rgb(43, 197, 197);
   font-size: xx-large;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   padding: 3vh 3vw;
   text-align: center;
 }
-.portadaInicio main div h2 a {
+.portadaInicio main div h1 a {
   color: rgb(253, 179, 136);
   font-family: "Montserrat", sans-serif;
   font-size: 40px;
 }
 .portadaInicio main div p {
+  margin-top: 30px;
   padding: 3vh 5vw;
   color: black;
-  font-size: large;
-  font-family: "Roboto", sans-serif;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Colores de Fondo */
