--- a/scss/components/_portadaInicio.scss
+++ b/scss/components/_portadaInicio.scss
@@ -22,10 +22,10 @@
                 height: 100%;
             }
 
-            h2 {
+            h1 {
             color: rgb(43, 197, 197);
             font-size:xx-large;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Montserrat', sans-serif;
             padding: 3vh 3vw;
             text-align: center;
 
@@ -38,10 +38,11 @@
             }
 
             p {
+            margin-top: 30px;
             padding: 3vh 5vw;
             color: black;
-            font-size: large;
-            font-family: 'Roboto', sans-serif;  
+            font-size: 25px;
+            font-family: 'Montserrat', sans-serif;  
 
             }
         }
