Agregando SEO e  intento de Mixin

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,4 @@
 @import '../scss/components/footer';
 @import '../scss/components/seccionDosInicio';
 @import '../scss/components/seccionTresInicio';
+@import '../scss/breackpoints/breackpoints';
