--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,5 @@
 @import '../base/variables';
-
+@import '../breackpoints/breackpoints';
 
 .encabezado {
     background-color: $bg-color-encabezado;
@@ -15,6 +15,10 @@
         width: 150px;
         margin-top: 30px;
         margin-right: 400px;
+        
+        @include small {
+            margin-right: 100px;
+
         }
     }    
         nav {
@@ -34,7 +38,8 @@
             }
         }
     }
+
 }
 
 
-
+}
