--- a/scss/breackpoints/_breackpoints.scss
+++ b/scss/breackpoints/_breackpoints.scss
@@ -1,7 +1,11 @@
 
 
-@mixin Small {
-    @media screen and (min-width: 576px) {
-        @content;
+@mixin small {
+    @media screen and (max-width: 576px) {
+      margin-right: 50%;
+      font-size: 12px;
+      color: pink;
+      font-family: "montserrat";
+    
     }
 }
