--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 20vh;
     text-align: center;
-
+    
 
     .logo {
         display: inline-block;
@@ -15,11 +15,7 @@
         width: 150px;
         margin-top: 30px;
         margin-right: 400px;
-        
-        @include small {
-            margin-right: 100px;
-
-        }
+        @include small;
     }    
         nav {
         display: inline-block;
@@ -32,7 +28,8 @@
                     color: black;
                     font-size: $font-size-nav;
                     font-family: 'Montserrat', sans-serif ;
-                    
+                    @include small;
+
                     }
 
             }
