--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,4 +6,8 @@ $bg-color-seccion2: rgb(43, 197, 197);
 
 /* Tamaño de fuentes */
 
+
+$font-size-titulo: 40px;
+$font-size-sub-titulo: 30px; 
 $font-size-nav: 20px;
+$font-family: "Montserrat", sans-serif ; 
