--- a/scss/components/_seccionDosContacto.scss
+++ b/scss/components/_seccionDosContacto.scss
@@ -4,16 +4,10 @@
 
     background-color: $bg-color-seccion2;
     text-align: center;
-    height: 90vh;
+    height: 85vh;
     
 
-    h1 { 
-        padding: 20px 0 ;
-        color: white;
-        font-size:$font-size-titulo;
-        font-family: $font-family;
-        
-    }
+    
 
     div {
         display: flex;
@@ -24,6 +18,14 @@
         flex-direction: column;
         //align-items: center;
         justify-content: center;
+
+        h2 { 
+            padding: 20px 0 ;
+            color: white;
+            font-size:$font-size-titulo;
+            font-family: $font-family;
+            
+        }
         
         p {
         color: black;
@@ -47,7 +49,8 @@
 
         width: 70vw;
         height: 75vh;
-        margin-right: 80px;
+        margin: 50px 100px 30px 0;
+        //margin-right: 80px;
         
         img {
             width: 220px;
@@ -56,8 +59,8 @@
             
         }
 
-        h2 {
-            background-color: rgb(41, 182, 182);
+        h3 {
+            background-color: darken($bg-color-seccion2, 13% );
             padding: 5px 10px;
             color: white;
             font-size: 25px;
