--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -7,25 +7,37 @@
     width: 100%;
     height: 20vh;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
     
 
     .logo {
-        display: inline-block;
+       // display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     
         .encabezadoLogo {
-        width: 150px;
-        margin-top: 30px;
-        margin-right: 400px;
+        width: 200px;
+        margin-left: 40px;
         
     }    
 }
         nav {
-        display: inline-block;
+        display: flex;
+        
+        align-items: center;
        
 
             ul {
+                display: flex;
+                flex-direction: row;
+                
                 li {
-                display: inline-block;
+                
+                
                 padding: 0.5vh 3vw;
                     a{
                     color: black;
