--- a/scss/components/_seccionDosTratamientos.scss
+++ b/scss/components/_seccionDosTratamientos.scss
@@ -4,7 +4,7 @@
     background-color: $bg-color-seccion2;
     text-align: center;
     height: 98vh;
-    h1 {
+   h1 {
         padding: 20px 0 2px 0;
         color: white;
         font-size:$font-size-titulo;
@@ -20,7 +20,7 @@
             color: white;
             text-align: left;
             
-            padding: 0 100px 0 65% ;
+            padding-left: 65% ;
             margin: 10px 40px;
             font-size: $font-size-sub-titulo;
             font-family: $font-family;
