--- a/scss/components/_seccionTresTratamientos.scss
+++ b/scss/components/_seccionTresTratamientos.scss
@@ -4,6 +4,7 @@
     background-color: white;
     text-align: center;
     height: 90vh;
+    margin-top: 30px;
     h1 {
         padding: 20px 0 2px 0;
         color: white;
