--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,5 @@
 @import '../scss/components/seccionDosTratamientos';
 @import '../scss/components/seccionTresTratamientos';
 @import '../scss/components/seccionDosContacto';
+@import '../scss/components/seccionDosFaq';
+@import '../scss/components/seccionTresFaq.scss';
